--- a/pages/login.html
+++ b/pages/login.html
@@ -35,12 +35,14 @@
     </nav>
 
 
-    <section>
-
-        <input type="text" id="userName">
-        <input type="password" id="password">
-        <button id="logInBtn">send</button>
-
+    <section class="row justify-content-around align-items-center mt-5">
+        <div class="col-6">
+            <label class="col-sm-5" for="userName">userName</label>
+            <input class="col-sm-5" type="text" id="userName">
+            <label class="col-sm-5" for="password">password</label>
+            <input class="col-sm-5" type="password" id="password">
+            <button class="col-12 mt-3 btn btn-dark" id="logInBtn">send</button>
+        </div>
     </section>
 
 
