--- a/pages/profile.html
+++ b/pages/profile.html
@@ -7,7 +7,7 @@
     <title>exam2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -35,13 +35,15 @@
         </div>
     </nav>
 
-    <section>
-        <h1>welcome :<span id="full"> </span></h1>
+    <section class="row justify-content-around align-items-center">
+        <div class="text-center text-dark mb-5">
+            <h1>welcome :<span id="full"> </span></h1>
+        </div>
+        <div class="row justify-content-around align-items-center">
+            <a href="./dates.html" class="btn btn-dark col-7 col-sm-3"> date</a>
+            <a href="./weather.html" class="btn btn-dark col-7 col-sm-3"> weather</a>
+        </div>
     </section>
-    <a href="./dates.html" class="btn btn-dark"> date</a>
-    <a href="./weather.html" class="btn btn-dark"> weather</a>
-
-
 
 
     <script src="../js/profile.js"></script>
