--- a/pages/signup.html
+++ b/pages/signup.html
@@ -40,23 +40,23 @@
     <section class="row justify-content-around align-items-center mt-5">
         <div class="col-6 form">
             <div class="mt-2">
-                <label class="col-5 form-label" for="fullName">fullName</label>
-                <input class="col-5" type="text" id="fullName">
+                <label class="col-sm-5 form-label" for="fullName">fullName</label>
+                <input class="col-sm-5" type="text" id="fullName">
             </div>
             <div class="mt-2">
-                <label class="col-5 form-label" for="userName">userName</label>
-                <input class="col-5" type="text" id="userName">
+                <label class="col-sm-5 form-label" for="userName">userName</label>
+                <input class="col-sm-5" type="text" id="userName">
+            </div>
+            <div class=" mt-2">
+                <label class="col-sm-5 form-label" for="email">email</label>
+                <input class="col-sm-5" type="email" id="email">
             </div>
             <div class="mt-2">
-                <label class="col-5 form-label" for="email">email</label>
-                <input class="col-5" type="email" id="email">
+                <label class="col-sm-5 form-label" for="password">password</label>
+                <input class="col-sm-5" type="password" id="password">
             </div>
             <div class="mt-2">
-                <label class="col-5 form-label" for="password">password</label>
-                <input class="col-5" type="password" id="password">
-            </div>
-            <div class="mt-2">
-                <button class="mt-3 col-12" id="signUpBtn">send</button>
+                <button class="mt-3 col-12 btn btn-dark" id="signUpBtn">send</button>
             </div>
     </section>
 
