--- a/pages/weather.html
+++ b/pages/weather.html
@@ -7,7 +7,7 @@
     <title>exam2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -35,11 +35,12 @@
         </div>
     </nav>
 
-    <section id="weather">
+    <section id="weather" class="row justify-content-around align-items-center text-center">
         <h1> city Name : <span id="cityName"></span> </h1>
         <h2>Temperature : <span id="temp"></span></h2>
         <h2>humidity : <span id="humidity"></span></h2>
-        <h3><span>lon :</span><span id="lon"></span><span>lat :</span><span id="lat"></span></h3>
+        <h3><span class="mx-2">lon :</span><span class="mx-2" id="lon"></span><span class="mx-2">lat :</span><span
+                class="mx-2" id="lat"></span></h3>
         <input type="text" name="" id="citySearch">
         <button id="citySearchbtn">Search</button>
     </section>
