--- a/pages/dates.html
+++ b/pages/dates.html
@@ -7,15 +7,14 @@
     <title>exam2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 
-    <!-- fix nav -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">athan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,22 +34,25 @@
             </div>
         </div>
     </nav>
-    <section>
+    <section class="row justify-content-around align-items-center mt-5 text-light">
         <div id="dateHijri"></div>
         <div id="datemelady"></div>
-        <table id="info">
-            <tr>
-                <th>الفجر</th>
-                <th>الظهر</th>
-                <th>العصر</th>
-                <th>المغرب</th>
-                <th>العشاء</th>
-            </tr>
-        </table>
+        <div class="row justify-content-center">
+            <table id="info">
+                <tr>
+                    <th>الفجر</th>
+                    <th>الظهر</th>
+                    <th>العصر</th>
+                    <th>المغرب</th>
+                    <th>العشاء</th>
+                </tr>
+            </table>
+        </div>
+        <button class="col-4 btn btn-light" id="getmelady"> melady</button>
+        <button class="col-4 btn btn-light" id="getHijri"> Hijri</button>
     </section>
 
-    <button id="getmelady"> melady</button>
-    <button id="getHijri"> Hijri</button>
+
 
 
 
