--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
     <title>exam2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
@@ -36,11 +36,11 @@
 
 
     <section class="row justify-content-around align-items-center mt-5">
-        <div class="col-6">
-            <label class="col-sm-5" for="userName">userName</label>
-            <input class="col-sm-5" type="text" id="userName">
-            <label class="col-sm-5" for="password">password</label>
-            <input class="col-sm-5" type="password" id="password">
+        <div class="col-6 border border-white py-5">
+            <label class="col-sm-5 my-1" for="userName">userName</label>
+            <input class="col-sm-5 my-1" type="text" id="userName">
+            <label class="col-sm-5 my-1" for="password">password</label>
+            <input class="col-sm-5 my-1" type="password" id="password">
             <button class="col-12 mt-3 btn btn-dark" id="logInBtn">send</button>
         </div>
     </section>
