--- a/pages/weather.html
+++ b/pages/weather.html
@@ -7,13 +7,13 @@
     <title>exam2</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">athan</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,14 +35,17 @@
         </div>
     </nav>
 
-    <section id="weather" class="row justify-content-around align-items-center text-center">
-        <h1> city Name : <span id="cityName"></span> </h1>
+    <section id="weather" class="row justify-content-around align-items-center text-light text-center">
+        <h1> City Name : <span id="cityName"></span> </h1>
         <h2>Temperature : <span id="temp"></span></h2>
-        <h2>humidity : <span id="humidity"></span></h2>
+        <h2>Humidity : <span id="humidity"></span></h2>
         <h3><span class="mx-2">lon :</span><span class="mx-2" id="lon"></span><span class="mx-2">lat :</span><span
                 class="mx-2" id="lat"></span></h3>
-        <input type="text" name="" id="citySearch">
-        <button id="citySearchbtn">Search</button>
+        <div class="row col-sm-6 justify-content-around align-items-center">
+            <input class="mt-5" type="text" name="" id="citySearch" placeholder="enter any city">
+            <button class="mt-2 btn btn-dark" id="citySearchbtn">Search</button>
+        </div>
+
     </section>
 
 
